[SEO] Added description and canonical URL

--- a/_pages/tech/index.html
+++ b/_pages/tech/index.html
@@ -1,6 +1,7 @@
 ---
 layout: category-page
 title: Tech
+description: Blog posts on front-end development, Node, automation tools and Android
 permalink: "/tech/"
 paginate:
   category: "tech"
