--- a/_pages/travel/index.html
+++ b/_pages/travel/index.html
@@ -1,6 +1,7 @@
 ---
 layout: category-page
 title: Travel
+description: Blog posts about life as a digital nomad from India
 permalink: "/travel/"
 paginate:
   category: "travel"
