[URL format] /:category to /blog/:category
/travel to /blog/travel, /tech to /blog/tech

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
---- 
+---
 layout: bare
 title: Home
 ---
@@ -6,7 +6,7 @@ title: Home
 <div class="home-container">
     <div class="home">
         <h4 class="heading">Vinay Gopinath</h4>
-        <a href="/tech"><button class="btn">Read my tech posts</button></a>
-        <a href="/travel"><button class="btn">Read my travel posts</button></a>
+        <a href="/blog/tech"><button class="btn">Read my tech posts</button></a>
+        <a href="/blog/travel"><button class="btn">Read my travel posts</button></a>
     </div>
 </div>
